--- a/Styles/loginStyle.css
+++ b/Styles/loginStyle.css
@@ -1,5 +1,10 @@
-form > *, input, label, select {
+/* form > *, input, label, select {
     margin: 10px;
     padding: 5px 10px;
-}
+} */
 
+.loginContainer {
+    /* border: 1px solid black; */
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.336);
+}
