--- a/Styles/loginStyle.css
+++ b/Styles/loginStyle.css
@@ -8,3 +8,12 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.336);
 }
+
+input.error, select.error {
+    border-color: red !important;
+    box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.25)!important;
+}
+
+label.error {
+    color: red;
+}
