--- a/Styles/indexStyle.css
+++ b/Styles/indexStyle.css
@@ -8,9 +8,17 @@ html, body {
 }
 
 
-/* * {
+* {
     outline: 1px solid rgba(0, 0, 0, 0.138);
-} */
+}
+
+
+#profile_image {
+    width: 30px !important;
+    height: 30px !important;
+    
+    border-radius: 50%;
+}
 body {
     box-sizing: border-box;
     font-family: 'Outfit', sans-serif;
@@ -49,7 +57,7 @@ li.nav-item a {
 
 
 #firstContainerItems1{
-    background-image: url("images/firstContainerImage1.jpg");
+    background-image: url("../images/firstContainerImage1.jpg");
     background-size:110% 100%;
     grid-column: 1/3;
     grid-row: 1/3;
@@ -57,25 +65,25 @@ li.nav-item a {
 }
 
 #firstContainerItems2{
-    background-image: url("images/firstContainerImage2.jpg");
+    background-image: url("../images/firstContainerImage2.jpg");
     background-size:100% 110%;
     height: 38.6vh;
 }
 
 #firstContainerItems3{
-    background-image: url("images/firstContainerImage3.jpg");
+    background-image: url("../images/firstContainerImage3.jpg");
     background-size:100% 100%;
     height: 38.6vh;
 }
 
 #firstContainerItems4{
-    background-image: url("images/firstContainerImage4.jpg");
+    background-image: url("../images/firstContainerImage4.jpg");
     background-size:100% 125%;
     height: 38.6vh;
 }
 
 #firstContainerItems5{
-    background-image: url("images/firstContainerImage5.jpg");
+    background-image: url("../images/firstContainerImage5.jpg");
     background-size:100% 100%;
     height: 38.6vh;
 }
@@ -409,4 +417,16 @@ footer a:hover {
 }
 
 
+
+/* ------EDIT PROFILE ------ */
+.editProfileContainer {
+    margin-top: 10vh;
+}
+
+#editProfileImage {
+    border: 2px solid black;
+    border-radius: 40%;
+    width: 40vh;
+    height: 40vh;
+}
 
