--- a/Styles/indexStyle.css
+++ b/Styles/indexStyle.css
@@ -9,7 +9,7 @@ html, body {
 
 
 * {
-    outline: 1px solid rgba(0, 0, 0, 0.138);
+    /* outline: 1px solid rgba(0, 0, 0, 0.138); */
 }
 
 
@@ -21,6 +21,10 @@ html, body {
 }
 body {
     box-sizing: border-box;
+    font-family: 'Outfit', sans-serif;
+}
+
+input,button {
     font-family: 'Outfit', sans-serif;
 }
 
@@ -424,9 +428,27 @@ footer a:hover {
 }
 
 #editProfileImage {
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 40%;
     width: 40vh;
     height: 40vh;
+    box-shadow: 0px 0px 10px grey;
+    transition: all 0.3s;
 }
 
+#editProfileImage:hover {
+    box-shadow: 0px 0px 20px grey;
+}
+
+input.error, select.error {
+    border-color: red !important;
+    box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.25)!important;
+}
+
+label.error {
+    color: red;
+}
+
+.formContainer {
+    min-width: 50vw;
+}
