--- a/Styles/indexStyle.css
+++ b/Styles/indexStyle.css
@@ -104,6 +104,10 @@ html, body {
     margin: 20vh 7vw 5vh 7vw;
 }
 
+.mensContainerCart {
+    margin: 20vh 14vw 5vh 14vw;
+}
+
     
 
 .arrowItems {
@@ -167,6 +171,10 @@ html, body {
 .imageListItem .stars {
     font-size: 1em;
 }
+
+/* .cart-button {
+    z-index: 2000;
+} */
 
 .exploreContainer1 {
     width: 70%;
@@ -340,6 +348,15 @@ html, body {
 .mediumBoldText {
     font-weight: bold;
 }
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currentlyefox */
+  }
 
 
 
